[package]
name = "aint"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Jack Bernard <jack.a.bernard.jr@mgail.com>"]
repository = "https://github.com/Vociferix/aint"
description = "Arbitrary width integers between 1 and 128"
homepage = "https://github.com/Vociferix/aint"
documentation = "https://docs.rs/aint"
readme = "README.md"
keywords = [
    "int",
    "uint",
    "arbitrary",
    "no_std",
    "num",
]
categories = [
    "embedded",
    "encoding",
    "mathematics",
    "no-std",
    "no-std::no-alloc",
    "parsing",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true }
num-traits = { version = "0.2", optional = true }
num-integer = { version = "0.1", optional = true }

[dev-dependencies]
paste = "1.0"

[features]
default = []
serde = ["dep:serde"]
num = ["dep:num-traits", "dep:num-integer"]
